Add popup to choose which recipe to use

--- a/app/src/main/res/layout/activity_factory.xml
+++ b/app/src/main/res/layout/activity_factory.xml
@@ -7,6 +7,16 @@
     android:layout_height="match_parent"
     tools:context=".FactoryActivity">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Main product: "
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintBottom_toBottomOf="@id/factoryProductAmount"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/factoryList"
         android:layout_width="0dp"
@@ -14,5 +24,25 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/factoryProductAmount" />
+
+    <TextView
+        android:id="@+id/factoryProductName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="product-name"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/factoryProductAmount" />
+
+    <EditText
+        android:id="@+id/factoryProductAmount"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="numberDecimal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/factoryProductName"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
