--- a/app/src/main/res/layout/craftable_card.xml
+++ b/app/src/main/res/layout/craftable_card.xml
@@ -9,6 +9,7 @@
         android:id="@+id/craftableCardText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
