Implement ability to change crafting machine

--- a/app/src/main/res/layout/recipe_card.xml
+++ b/app/src/main/res/layout/recipe_card.xml
@@ -11,7 +11,7 @@
         android:id="@+id/machineString"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="machineName"
+        android:text="machineString"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
