--- a/app/src/main/res/layout/popup_config.xml
+++ b/app/src/main/res/layout/popup_config.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:background="?attr/colorBackgroundFloating">
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/disabled_switch"
