--- a/app/src/main/res/layout/popup_list.xml
+++ b/app/src/main/res/layout/popup_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:background="?attr/colorBackgroundFloating">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/popupList"
