--- a/app/src/main/res/layout/activity_factory.xml
+++ b/app/src/main/res/layout/activity_factory.xml
@@ -7,6 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".FactoryActivity">
 
+    <include
+        android:id="@+id/factory_banner"
+        layout="@layout/banner"/>
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -15,7 +19,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintBottom_toBottomOf="@id/factoryProductAmount"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/factory_banner" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/factoryList"
@@ -33,7 +37,7 @@
         android:text="product-name"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/factory_banner"
         app:layout_constraintBottom_toBottomOf="@id/factoryProductAmount" />
 
     <EditText
@@ -44,5 +48,5 @@
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/factoryProductName"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/factory_banner" />
 </androidx.constraintlayout.widget.ConstraintLayout>
