--- a/app/src/main/res/layout/factory_card.xml
+++ b/app/src/main/res/layout/factory_card.xml
@@ -8,7 +8,7 @@
         android:id="@+id/factoryName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
